# duesgoerd

./: .dockerignore  404.html  CNAME  Dockerfile  README.md  Taskfile.yaml  index.html
.github/workflows/: deployment.yml  pages-deployment.yml
assets/: index.340ff4c0.js  index.46658626.css  index.7af97183.js  index.a6eefc6b.js  index.c8f17482.css  index.f3c0b09e.js
scripts/: entrypoint.sh
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/ws/: client.rs  errors.rs  limiter.rs  manager.rs  mod.rs  models.rs
webclient/: package.json
webclient/src/: App.module.scss  App.tsx  colors.scss  index.scss
webclient/src/api/: models.ts  ws.ts
webclient/src/components/footer/: Footer.module.scss  Footer.tsx
webclient/src/components/messages/: Messages.module.scss  Messages.tsx
webclient/src/components/modal/: Modal.module.scss  Modal.tsx
