[package]
name = "duesgoerd-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-tungstenite = "0.17.2"
async-std = "1.12.0"
futures = "0.3.24"
log = "0.4.0"
env_logger = "0.9.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
timer = "0.2"
ratelimit_rs = "0.1"